--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "copy-webpack-plugin": "^5.0.5",
     "promise-middleware-redux": "^1.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
